test/files/neg/t9529.scala
@deprecated("foo", "")
@deprecated("bar", "")
class `scala ftw`

@java.lang.Deprecated
@java.lang.Deprecated
class TooMany
